# gst

./: .env.example  .gitignore  AZURE_DEPLOYMENT.md  FEATURES.md  GST HSN Resolver.spec  Launch GST HSN App.bat  README.md  build_exe.ps1  pyproject.toml  requirements.txt  run_web_app.py  setup_azure.sh  test_lookup.py  test_new_features.py
data/: client_input_template.csv  google_search_products.txt  google_search_queries.txt  hsn_master_from_gst.csv  hsn_master_template.csv  learned_mappings.csv  learning_run2.csv  output_result.xlsx  output_result_20260318_122745.xlsx  sample_client_names.csv  training_header_demo.csv  training_source_catalog.csv
data/training/raw/: google_discovered_1773826975.csv  gst-hsn-lookup  harvested_pairs_20260318_150208.csv  searchhsnsac
installer/: gst_hsn_resolver.iss
scripts/: build_exe.ps1  build_installer.ps1
src/gst_hsn_tool/: __init__.py  __main__.py  bootstrap_master.py  catalog.py  cli.py  config.py  db.py  gui.py  hsn_extractor.py  learning.py  loader.py  lookup.py  matcher.py  models.py  pipeline.py  similarity.py  train_bulk.py  training.py  utils.py  web_app.py  web_collector.py
src/gst_hsn_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_catalog.py  test_learning.py  test_matcher.py  test_training.py  test_web_collector.py
