[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gst-hsn-tool"
version = "0.1.0"
description = "Offline GST HSN resolver MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    "streamlit==1.42.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
