[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gst-hsn-tool"
version = "0.1.0"
description = "Offline GST HSN resolver MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl==3.1.5",
    "streamlit==1.42.2",
    "fuzzywuzzy==0.18.0",
    "python-Levenshtein==0.23.0",
    "pandas==2.3.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
